    * On update server_updater first check if record exist:
      - Update: bin/AST_update_AMI2.pl,
          bin/AST_update.pl.
    * Add webphone:
      - New www/agc/webrtcphone/*,
          docs/conf_examples/http.conf.sample.
      - Update: www/agc/vicidial.php.
    * Add utf-8 encoding for conffiles:
      - Update bin/ADMIN_keepalive_ALL.pl.
    * Rename log files to *.log:
      - Update bin/AST_manager_send.pl,
          bin/AST_VDadapt.pl,
          bin/AST_VDhopper.pl,
          bin/AST_manager_listen.pl,
          agi/VD_amd.agi,
          bin/AST_VDauto_dial_FILL.pl,
          agi/agi-DID_route.agi,
          bin/ADMIN_timeclock_auto_logout.pl,
          bin/AST_CRON_WallBoard3_gen.php,
          bin/AST_VDremote_agents.pl,
          bin/AST_cleanup_agent_log.pl,
          bin/AST_manager_kill_hung_congested.pl,
          bin/AST_manager_listen_AMI2.pl,
          bin/AST_manager_send.pl,
          bin/FastAGI_log.pl,
          bin/AST_send_action_child.pl,
          agi/VDL_CID_lookup.agi,
          agi/VD_auto_post_VERIFY.agi,
          agi/agent_monitor.agi,
          agi/agi-AGENT_dial_in.agi,
          agi/agi-AGENT_route.agi,
          agi/agi-AGENT_route_ng.agi,
          agi/agi-CALLCARD_dial_in.agi,
          agi/agi-CANADA_PRI_CIDname.agi,
          agi/agi-IVR_recording_verification.agi,
          agi/agi-LCR-Route.agi,
          agi/agi-NVA_recording.agi,
          agi/agi-VDAD_ALL_inbound.agi,
          agi/agi-VDAD_ALL_outbound.agi,
          agi/agi-VDAD_ALL_outboundBETA.agi,
          agi/agi-VDAD_ALL_outboundBETA2.agi,
          agi/agi-VDAD_RINGALL.agi,
          agi/agi-VDAD_inbound_calltime_check.agi,
          agi/agi-VDAD_local_optimize.agi,
          agi/agi-VDAD_pin_IVR.agi,
          agi/agi-VDADautoREMINDER.agi,
          agi/agi-VDADautoREMINDERxfer.agi,
          agi/agi-VDADfixCXFER.agi,
          agi/agi-VDADinbound_NI_DNC_CIDlookup.agi,
          agi/agi-VDADlisten_DTMF.agi,
          agi/agi-VDADselective_CID_hangup.agi,